--- a/_includes/slide16-sheet1.html
+++ b/_includes/slide16-sheet1.html
@@ -1,109 +1,129 @@
 <table class="balance-sheet table1">
 <thead>
     <tr class="title">
-        <td>Summarized Balance Sheet <span>*</span></td>
-        <td>Total</td>
+        <td>Summarized Balance Sheet</td>
+        <td>July 31, 2017 Total</td>
+        <td>July 31, 2016 Total</td>
     </tr>                        
 </thead>
 <tbody>
     <tr class="section">
         <td>Current Assets</td>
         <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>Cash and Cash Equivalents</td>
+        <td>$ 10,674,800</td>
         <td>$ 10,674,800</td>
     </tr>
     <tr>
         <td>Portfolio Investments</td>
         <td>140,570,564</td>
+        <td>140,570,564</td>
         </tr>
-    <tr>
+
     <tr>
         <td>Accounts Receivable</td>
+        <td>728,045</td>
         <td>728,045</td>
         </tr>
     <tr>
     <tr>
         <td>Prepaid Expenses</td>
         <td>351,840</td>
+        <td>351,840</td>
         </tr>
     <tr>
     <tr>
         <td>Prepaid Expenses</td>
         <td>351,840</td>
+        <td>351,840</td>
     </tr>
     <tr class="total">
         <td></td>
+        <td class="single">152,325,249</td>
         <td class="single">152,325,249</td>
     </tr>
     <tr class="section">
         <td>Other Assets</td>
         <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>Capital Assets</td>
         <td>64,567,007</td>
-    </tr>
-    <tr>
-        <td>Lease Inducement</td>
-        <td>-</td>
+        <td>64,567,007</td>
     </tr>
     <tr class="total">
         <td></td>
         <td class="single">64,567,007</td>
+        <td class="single">64,567,007</td>
     </tr>
     <tr class="section total">
         <td>Total Assets</td>
-        <td class="double">216,892,256</td>
+        <td class="double">$216,892,256</td>
+        <td class="double">$216,892,256</td>
     </tr>
     <tr class="section">
         <td>Current Liabilities</td>
+        <td></td>
         <td></td>
     </tr>
     <tr>
         <td>Bank Indebtedness</td>
         <td>-</td>
+        <td>-</td>
     </tr>
     <tr>
         <td>Accounts Payable and Deferred Revenue</td>
-        <td>1,502,730</td>
+        <td>$1,502,730</td>
+        <td>$1,502,730</td>
     </tr>
     <tr>
         <td>Unrealized Loss on Forward Contracts</td>
         <td>994,337</td>
+        <td>994,337</td>
     </tr>
     <tr class="section total">
         <td>Total Liabilities</td>
-        <td class="top double">2,497,067</td>
+        <td class="top single">$2,497,067</td>
+        <td class="top single">$2,497,067</td>
     </tr>
     <tr class="section">
         <td>Fund Balances</td>
+        <td></td>
         <td></td>
     </tr>
     <tr>
         <td>Invested in Capital Assets</td>
         <td>64,567,007</td>
+        <td>64,567,007</td>
     </tr>
     <tr>
         <td>Externally Restricted</td>
+        <td>122,547,852</td>
         <td>122,547,852</td>
     </tr>
     <tr>
         <td>Internally Restricted</td>
         <td>831,836</td>
+        <td>831,836</td>
     </tr>
     <tr>
         <td>Unrestricted</td>
         <td>26,448,494</td>
+        <td>26,448,494</td>
     </tr>
     <tr class="section total">
         <td>Total Fund Balances</td>
-        <td class="single">214,395,189</td>
+        <td class="single">$214,395,189</td>
+        <td class="single">$214,395,189</td>
     </tr>
     <tr class="section total">
         <td>Total Liabilities and Fund Balances</td>
-        <td>216,892,256</td>
+        <td class="double">$216,892,256</td>
+        <td class="double">$216,892,256</td>
     </tr>
 </tbody>
 </table>
