--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -1,79 +1,91 @@
 <table class="balance-sheet table2">
     <thead> 
         <tr class="title">
-            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances <span>*</span></td>
-            <td>Total</td>
+            <td>Summarized Statement of Revenue, Expenses and Changes in Fund Balances</td>
+            <td>July 31, 2017 Total</td>
+            <td>July 31, 2016 Total</td>
         </tr>                        
     </thead>
 <tbody>
     <tr class="section">
         <td>Revenue</td>
         <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>Realized Inventment Income</td>
+        <td>$ 8,345,265</td>
         <td>$ 8,345,265</td>
     </tr>
     <tr>
         <td>Grants (Government and Other)</td>
         <td>1,804,027</td>
+        <td>1,804,027</td>
     </tr>
     <tr>
         <td>Donations and other Revenue</td>
+        <td>762,811</td>
         <td>762,811</td>
     </tr>
     <tr>
         <td>Unrealized Investment Income (Loss)</td>
         <td>331,580</td>
+        <td>331,580</td>
     </tr>
     <tr class="total">
         <td></td>
-        <td class="single">11,243,683</td>
+        <td class="single">$11,243,683</td>
+        <td class="single">$11,243,683</td>
     </tr>
     <tr class="section">
         <td>Expenses</td>
         <td></td>
+        <td></td>
     </tr>
     <tr>
         <td>Research, Conferences & Partnerships</td>
-        <td>11,792,058</td>
+        <td>$11,792,058</td>
+        <td>$11,792,058</td>
     </tr>
     <tr>
         <td>Amortization</td>
+        <td>3,480,827</td>
         <td>3,480,827</td>
     </tr>
     <tr>
         <td>Administrative</td>
         <td>1,593,669</td>
+        <td>1,593,669</td>
     </tr>
     <tr>
         <td>Facilities</td>
+        <td>1,089,937</td>
         <td>1,089,937</td>
     </tr>
     <tr>
         <td>Technical Support</td>
         <td>920,083</td>
+        <td>920,083</td>
     </tr>
     <tr class="total">
         <td></td>
-        <td class="single">18,876,574</td>
+        <td class="single">$18,876,574</td>
+        <td class="single">$18,876,574</td>
     </tr>
     <tr>
         <td>Excess of Revenue over Expenses<br>(Expenses over Revenue)</td>
         <td>(7,632,891)</td>
+        <td>(7,632,891)</td>
     </tr>
-    <tr>
-        <td>Interfund Transfers</td>
-        <td>-</td>
-    </tr>
-    <tr class="total">
+    <tr class="total section">
         <td>Fund Balances, Beginning of the Year</td>
-        <td>222,028,080</td>
+        <td class="top">$222,028,080</td>
+        <td class="top">$222,028,080</td>
     </tr>
-    <tr>
+    <tr class="section total">
         <td>Fund Balances, End of the Year</td>
-        <td class="top">214,395,189</td>
+        <td class="top double">$214,395,189</td>
+        <td class="top double">$214,395,189</td>
     </tr>
 </tbody>
 </table>
-<p class="small"><span>*</span> as of July 2017</p>
