--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -3,7 +3,7 @@
         <div class="w-100 w-80-l pr4">
             <div class="tabs mb3" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
-                <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
+                <div class="tab toggle" data-id="tab-2">Financial Statements</div>
                 <div class="tab toggle" data-id="tab-3">Notes</div>
                 <div class="download"><a class="no-underline" href="#">Download PDF</a></div>
             </div>
