--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,7 @@
 <section class="vh-100-ns landing slide-1">
+    <div class="landing-img">
+        <img class="progressive" src="assets/slides/CIGI_Campus-bw.jpg">
+    </div>
     <div class="wrapper h-100 flex items-center justify-center">
         <div class="content-wrapper">
             {% markdown template_content/home.md %}
