fixing padding/spacing on full width slides

--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,6 +1,6 @@
 <section class="vh-100-ns standard-slide slide-17">
   <div class="wrapper h-100 flex items-end">
-    <div class="w-100 w-80-l pr4">
+    <div class="w-100">
       <div class="slide-content pb4-ns pr6-ns pb6-ns z-1">
         <h1>Thank You</h1>
         <div class="img-container">
