--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,6 +1,6 @@
 <section class="vh-100-ns standard-slide joint-message slide-2">
     <div class="wrapper slide-content h-100">
-        <div class="w-100 w-80-l pr4">
+        <div class="w-100">
             <div class="tabs mb3" data-slide="slide-2">
                 <div class="tab toggle" data-id="tab-1">President's Message</div>
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
