--- a/_includes/slide10.html
+++ b/_includes/slide10.html
@@ -2,13 +2,19 @@
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide10-climate.md %}
+      <div class="view-article pb2 pt2">
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/case-divesting-fossil-fuels-canada?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>The Case for Divesting from Fossil Fuels in Canada</em>.</a>
+       <br>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/economic-opportunities-changing-climate?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>Economic Opportunities from a Changing Climate</em>.</a>
+      </div>
       <div class="lightbox-link">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-play" aria-hidden="true"></i>See Jeff Rubin talk about soy crops in Canada at CIGI.
-        </a>
+        <div class="youtube-lightbox pointer" data-videoid="ervJQ_v4fA8"><i class="fa fa-play" aria-hidden="true"></i>Watch Jeff Rubin’s lecture on the challenges and opportunities for Canada’s economy in a changing climate.            
+        </div>
       </div>
     </div>
   </div>
   <video loop muted class="fullscreen-bg-video">
     <source src='{{ "/data/wind_turbine_FIX_2-4mbps_1.mp4" | relative_url }}' type="video/mp4">
-  </video>
-</section>
+    </video>
+  </section>
+  
