--- a/_includes/slide11.html
+++ b/_includes/slide11.html
@@ -2,6 +2,10 @@
   <div class="wrapper h-100 flex items-end">
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide11-refugee.md %}
+      <div class="view-article pb2 pt2">
+        <a class="no-underline pointer underline-hover" href="https://www.worldrefugeecouncil.org?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read more about the World Refugee Council.
+        </a>
+      </div>
       <div class="lightbox-link">
         <div class="youtube-lightbox pointer" data-videoid="7miQEf7ZGGs"><i class="fa fa-play" aria-hidden="true"></i>Watch Lloyd Axworthy introduce the World Refugee Council.
         </div>
