--- a/_includes/slide13.html
+++ b/_includes/slide13.html
@@ -3,10 +3,10 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide13-blockchain.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the policy brief on building an inclusive, transparent and accountable digital economy.</a>
       </div>
       <div class="lightbox-link">
-          <div class="youtube-lightbox pointer" data-videoid="SWqhXzC_9NA"><i class="fa fa-play" aria-hidden="true"></i>Watch the companion video to Julie Maupin’s report on realizing policy through blockchain</div>
+          <div class="youtube-lightbox pointer" data-videoid="SWqhXzC_9NA"><i class="fa fa-play" aria-hidden="true"></i>Watch Julie Maupin discuss realizing policy through blockchain.</div>
 
       </div>
     </div>
