--- a/_includes/slide4.html
+++ b/_includes/slide4.html
@@ -3,7 +3,8 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide4-nafta.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Full Article</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/nafta-and-knowledge-economy?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the NAFTA and the Knowledge Economy essays.
+        </a>
       </div>
     </div>
   </div>
