--- a/_includes/slide12.html
+++ b/_includes/slide12.html
@@ -3,7 +3,7 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide12-ip.md %}
       <div class="lightbox-link">
-          <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow Richard Gold address the “myth” of intellectual property
+          <div class="youtube-lightbox pointer" data-videoid="GpnjBR8y8WE"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow Richard Gold address the “myth” of intellectual property.
           </div>
       </div>
     </div>
