--- a/_includes/slide15.html
+++ b/_includes/slide15.html
@@ -3,7 +3,7 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide15-t20.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/blockchains-and-g20-building-inclusive-transparent-and-accountable-digital-economy?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/activity/cigi-and-think-20-t20?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read CIGI experts’ contributions to T20 policy briefs.</a>
       </div>
     </div>
   </div>
