--- a/_includes/slide5.html
+++ b/_includes/slide5.html
@@ -3,10 +3,11 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide5-gcig.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/look-whos-watching-surveillance-treachery-and-trust-online?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read more about <em>Look Who’s Watching</em>.
+        </a>
       </div>
       <div class="lightbox-link">
-          <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/cigionline/cigi-podcast-episode-1001"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about Look Who’s Watching</div>
+          <div class="soundcloud-lightbox pointer" data-url="https://soundcloud.com/cigionline/cigi-podcast-episode-1001"><i class="fa fa-volume-down" aria-hidden="true"></i>Listen to former CBC Radio host Mary Ambrose interview Fen Osler Hampson about <em>Look Who’s Watching</em>.</div>
     </div>
     </div>
   </div>
