--- a/_includes/slide6.html
+++ b/_includes/slide6.html
@@ -3,11 +3,11 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide6-eurozone.md %}
       <div class="view-article pb2 pt2">
-          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/laid-low-inside-crisis-overwhelmed-europe-and-imf?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read more about <em>Laid Low</em>.</a>
       </div>
       <div class="lightbox-link">
             <div class="lightbox-link">
-                <div class="youtube-lightbox pointer" data-videoid="1r48pRFarEw"><i class="fa fa-play" aria-hidden="true"></i>Watch a behind-the-scenes account of how the euro-zone crisis caught the IMF off guard</div>
+                <div class="youtube-lightbox pointer" data-videoid="1r48pRFarEw"><i class="fa fa-play" aria-hidden="true"></i>Watch a behind-the-scenes account of how the euro-zone crisis caught the IMF off guard.</div>
                 </div>
 
       </div>
