--- a/_includes/slide7.html
+++ b/_includes/slide7.html
@@ -3,7 +3,8 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide7-undrip.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/undrip-implementation-braiding-international-domestic-and-indigenous-laws?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>View Book</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/undrip-implementation-braiding-international-domestic-and-indigenous-laws?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the <em>UNDRIP Implementation</em> report.
+        </a>
       </div>
       <div class="lightbox-link">
         <div class="twitter-lightbox pointer" data-tweetid="869957715375869952"><i class="fa fa-play" aria-hidden="true"></i>Watch Senior Fellow John Borrows explain why UNDRIP is a legal opportunity for Canada's constitution.</div>
