--- a/_includes/slide8.html
+++ b/_includes/slide8.html
@@ -3,7 +3,8 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
       {% markdown template_content/slide8-north.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/north-60-toward-renewed-canadian-arctic-agenda?source=2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/north-60-toward-renewed-canadian-arctic-agenda?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the <em>North of 60</em> special report.
+        </a>
       </div>
     </div>
   </div>
