--- a/_includes/slide9.html
+++ b/_includes/slide9.html
@@ -3,7 +3,7 @@
     <div class="slide-content pb4-ns pr6-ns pb6-ns flex flex-column">
       {% markdown template_content/slide9-carbon.md %}
       <div class="view-article pb2 pt2">
-        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/generating-growth-innovation-low-carbon-economy-exploring-safeguards-finance-and?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the Report</a>
+        <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/publications/generating-growth-innovation-low-carbon-economy-exploring-safeguards-finance-and?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read <em>Generating Growth from Innovation for the Low-carbon Economy</em>.</a>
       </div>
     </div>
   </div>
