--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,5 +1,5 @@
 <section class="vh-100-ns landing slide-1">
-    <div class="landing-img">
+    <div class="landing-img img-container">
         <img class="progressive" src="assets/slides/CIGI_Campus-bw.jpg">
     </div>
     <div class="wrapper h-100 flex items-center justify-center">
