updating staff thank you slide

--- a/_includes/slide17.html
+++ b/_includes/slide17.html
@@ -1,14 +1,12 @@
 <section class="vh-100-ns standard-slide slide-17">
   <div class="wrapper h-100 flex items-end">
-    <div class="w-100">
-      <div class="slide-content pb4-ns pr6-ns pb6-ns z-1">
-        <h1>Thank You</h1>
-        <div class="img-container">
-          <img class="progressive image-right" src="{{ '/assets/CIGI_Family_Photo_v2.jpg' | relative_url }}" alt="">
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In congue luctus feugiat. Donec et iaculis nisl. Cras facilisis scelerisque mauris venenatis pellentesque. Duis semper sem ultrices tellus ornare, congue posuere tortor tincidunt. Donec luctus, felis sit amet ornare iaculis, lorem ex pretium mi, a sollicitudin augue nibh vitae mauris. Sed quis sollicitudin libero. Aliquam egestas velit et nunc maximus egestas.</p>
-        <p>In aliquam bibendum purus et tempor. Aenean hendrerit orci eget ante congue tincidunt. Praesent molestie tristique dui et tempor. Donec laoreet tortor sed magna rhoncus rhoncus. Aenean id fermentum lacus, vel luctus mi. Nunc in nulla nec tellus pellentesque aliquet at non mi. Nam hendrerit lorem sed efficitur feugiat. Pellentesque id massa nisl. Maecenas eros neque, ultricies vel massa ac, tempor sagittis libero.</p>
+    <div class="wrapper h-100 flex items-end">
+      <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
+        {% markdown template_content/slide17-staff.md %}
+        <div class="view-article pb2 pt2">
+          <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/about/annual-report?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Download Annual Report PDF.</a>
       </div>
+
   </div>
 </div>
 </section>
