fixing some padding

--- a/_assets/css/custom/mobile.scss
+++ b/_assets/css/custom/mobile.scss
@@ -61,7 +61,7 @@
     }
   }
 
-  #timeline-slide-content,
+  -slide-content,
   #timeline-filters {
     display: none;
   }
@@ -79,7 +79,7 @@
   .timeline-slide,
   .financials,
   .standard-slide {
-    padding-top: 3rem;
+    padding-top: 2rem;
   }
 
   .mobile-button {
