--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -34,10 +34,6 @@
   z-index: 5;
 }
 
-.image-right {
-  object-position: right;
-}
-
 .fullscreen-bg-video {
   background-position: center center;
   background-size: cover;
@@ -190,11 +186,6 @@ p {
 }
 
 .standard-slide {
-  .w-80-l {
-      @include media-query($small-screen) {
-        width: 95%;
-    }
-  }
 
   h1 {
     font-weight: 400;
@@ -203,7 +194,6 @@ p {
 
   h3 {
     font-size: 1rem;
-    padding-bottom: 0.5rem;
     text-transform: uppercase;
   }
 
@@ -237,6 +227,21 @@ p {
     @include media-query($on-laptop) {
       display: none;
     }
+  }
+}
+
+.pr6-ns{
+  @include media-query($small-screen){
+    padding-right: 2rem;
+  }
+  @include media-query($small-phone){
+    padding-right: 2rem;
+  }
+}
+
+.pb6-ns{
+  @include media-query($small-screen){
+    padding-bottom: 3rem;
   }
 }
 
