add back nav on landing page

--- a/_assets/css/custom/navigation.scss
+++ b/_assets/css/custom/navigation.scss
@@ -85,6 +85,10 @@ $sidebar-button-radius: 1rem;
   }
   .sidebar-button{
     border: solid 1px white;
+    &:hover{
+      background: white;
+      background-clip: content-box
+    }
   }
 }
 
