bottom align tabbed slides

--- a/_includes/slide2.html
+++ b/_includes/slide2.html
@@ -1,6 +1,6 @@
 <section class="vh-100-ns standard-slide joint-message slide-2">
-    <div class="wrapper slide-content h-100">
-        <div class="w-100">
+    <div class="wrapper h-100 flex items-end">
+        <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
             <div class="tabs mb3" data-slide="slide-2">
                 <div class="tab toggle" data-id="tab-1">President's Message</div>
                 <div class="tab toggle" data-id="tab-2">Chair's Message</div>
