--- a/_assets/css/custom/timeline.scss
+++ b/_assets/css/custom/timeline.scss
@@ -583,3 +583,8 @@ $article-slide-timing-function: ease-in-out;
 .important-grey {
   fill: $grey-color !important;
 }
+
+// Moving the timeline up
+div[aria-label="Timeline"]{
+  margin-top: -10em;
+}
