fix column break for firefox, fix split of header (ar-157)

--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -227,6 +227,8 @@ hr {
 .col {
   column-count: 2;
   column-width: 450px;
+  break-inside: avoid;
+  page-break-inside: avoid;
 }
 
 .column-no-wrap {
