--- a/_includes/slide16-auditor.html
+++ b/_includes/slide16-auditor.html
@@ -1,5 +1,5 @@
-<h4>Report of the Independent Auditors on the Summary Financial Statements</h4>
-<p>To the Directors of The Centre for International Governance Innovation,</p>
+<p><strong>Report of the Independent Auditors on the Summary Financial Statements</strong><br>
+To the Directors of The Centre for International Governance Innovation,</p>
 <p>The accompanying summary financial statements, which comprise the summary balance sheet as at July 31, 2016 and the summary statement of revenue, expenses and changes in fund balances for the year then ended, and related notes, are derived from the financial statements of The Centre for International Governance Innovation (the “Organization”) as at, and for the year ended, July 31, 2016. We expressed an unmodified audit opinion on those financial statements in our report dated November 28, 2016. Those financial statements, and the summary financial statements, do not reflect the effects of events that occurred subsequent to the date of our report on those financial statements.</p>
 <p><strong>Management’s Responsibility for the Summary Financial Statements</strong><br/>
 Management is responsible for the preparation of a summary of the financial statements in accordance with Canadian accounting standards for not-for-profit organizations.</p>
