--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -46,8 +46,9 @@
     </div>
   </div>
 
-  <div class="wrapper dn-ns">
-    <h1 class="pb2">Sorry.</h1>
-    <p><em>Explore CIGI</em> cannot be displayed on your mobile device. For the best experience, please view on a desktop browser.</p>
+  <div class="wrapper dn-ns w-90 mobile-timeline">
+    <p>Explore CIGI cannot be displayed on your mobile device. For the best experience, please view on a desktop browser. For the best experience, please view on a desktop browser.</p>
+    <hr>
+    <p class="tc"><a href="www.cigionline.org/ar">View 2017 Annual Report</a></p>
   </div>
 </section>
