removed id that I didn't end up using

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-<section class="vh-100-ns landing slide-1" id="landing">
+<section class="vh-100-ns landing slide-1">
     <div class="landing-img">
         <img class="progressive" src="assets/slides/CIGI_Campus-bw.jpg">
     </div>
