--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -1,6 +1,6 @@
 <section class="vh-100-ns financials standard-slide slide-16">
     <div class="wrapper h-100 flex items-end">
-          <div class="slide-content pb4-ns pr6-ns pb6-ns z-1 flex flex-column">
+          <div class="slide-content pb4-ns z-1 flex flex-column">
             <div class="tabs mb3" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
                 <div class="tab toggle" data-id="tab-2">Financial Statements</div>
