--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -17,9 +17,11 @@
                 </div>
                 <div class="tab cf" data-id="tab-2">
                     {% include slide16-sheet1.html %}
+                </div>
+                <div class="tab cf" data-id="tab-3">
                     {% include slide16-sheet2.html %}
                 </div>
-                <div class="tab" data-id="tab-3">
+                <div class="tab" data-id="tab-4">
 
                     <h4>Notes</h4>
                     <p>Resources contributed for endowment are included in the Long Term Endowment Fund. Certain of such resources are to be held for a period of ten years or upon the dissolution, liquidation or winding up of the Organization, whichever occurs later. Certain of such resources contributed by the Federal Government of Canada is restricted in perpetuity. Investment income earned on resources of the Long Term Endowment Fund is reported in the Operating and Capital Fund.</p>
