--- a/_includes/slide3.html
+++ b/_includes/slide3.html
@@ -1,6 +1,6 @@
 <section class="vh-100-ns standard-slide slide-3">
   <div class="wrapper h-100 flex items-end">
-    <div class="slide-content pb4-ns pr6-ns z-1 flex flex-column">
+    <div class="slide-content pb4-ns pb6-ns pr6-ns z-1 flex flex-column">
       {% markdown template_content/slide3-innovation.md %}
       <div class="view-article pb2 pt2">
           <a class="no-underline pointer underline-hover" href="https://www.cigionline.org/innovation-series?source=ar2017"><i class="fa fa-file-text-o" aria-hidden="true"></i>Read the New Thinking on Innovation essays.</a>
