slight changes to sheet 1

--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -606,6 +606,7 @@ header.white {
         &:nth-child(2), &:nth-child(3) {
           padding-right: 1rem;
           text-align: right;
+          font-family: "Monaco";
         }
       }
       .section {
