--- a/_includes/slide16-sheet1.html
+++ b/_includes/slide16-sheet1.html
@@ -42,8 +42,8 @@
     </tr>
     <tr class="total">
         <td></td>
-        <td class="single">152,325,249</td>
-        <td class="single">152,325,249</td>
+        <td class="single">$152,325,249</td>
+        <td class="single">$152,325,249</td>
     </tr>
     <tr class="section">
         <td>Other Assets</td>
@@ -69,11 +69,6 @@
         <td>Current Liabilities</td>
         <td></td>
         <td></td>
-    </tr>
-    <tr>
-        <td>Bank Indebtedness</td>
-        <td>-</td>
-        <td>-</td>
     </tr>
     <tr>
         <td>Accounts Payable and Deferred Revenue</td>
