--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -73,7 +73,7 @@
         <td class="single">$18,876,574</td>
     </tr>
     <tr>
-        <td>Excess of Revenue over Expenses<br>(Expenses over Revenue)</td>
+        <td>Excess of Expenses over Revenue</td>
         <td>(7,632,891)</td>
         <td>(7,632,891)</td>
     </tr>
