--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -3,8 +3,9 @@
           <div class="slide-content pb4-ns z-1 flex flex-column">
             <div class="tabs mb3" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
-                <div class="tab toggle" data-id="tab-2">Financial Statements</div>
-                <div class="tab toggle" data-id="tab-3">Notes</div>
+                <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
+                <div class="tab toggle" data-id="tab-3">Revenue and Expenses</div>
+                <div class="tab toggle" data-id="tab-4">Notes</div>
                 <div class="download"><a class="no-underline" href="#">Download PDF</a></div>
             </div>
 
