updated photo captions

--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -10,26 +10,26 @@
     </p>
     <div class="mv4-ns mr4-ns relative">
       <div class="gallery" id="gallery">
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/ 2016-11-19-091552-19405.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/3W7A0257.JPG' | relative_url }}"/></div>
-        <div><img alt="CIGI President Rohinton Medhora on stage at the Think20 (T20) summit" src="{{ '/assets/gallery/380__1TK0083_ed_z.jpg' | relative_url }}"/></div>
-        <div><img alt="Participants in the 2016 Global Think Tank Summit" src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 92.jpg' | relative_url }}"/></div>
-        <div><img alt="CIGI President Rohinton Medhora beside then Minister of Foreign Affairs Stéphane Dion" src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 106.jpg' | relative_url }}"/></div>
-        <div><img alt="2016 Global Think Tank Summit roundtable" src="{{ '/assets/gallery/2016-09-30 - Global Think Tank Summit - 17.jpg' | relative_url }}"/></div>
-        <div><img alt="Deputy Governor of the Bank of Canada Timothy Lane on stage at the CIGI Campus" src="{{ '/assets/gallery/2016-11-16-Timothy Lane-20.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/2016-11-25 Global Youth Forum - 2_050.jpg' | relative_url }}"/></div>
-        <div><img alt="Local high school student participates in the Waterloo District School Board Model UN at the CIGI Campus" src="{{ '/assets/gallery/2017-03-24 - Model UN - 39.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/2017-04-03-Media Panel-Reporting the Refugee Crisis-7.jpg' | relative_url }}"/></div>
-        <div><img alt="Senior Fellow Jeff Rubin on stage at the CIGI Campus" src="{{ '/assets/gallery/2017-05-11-Speaker Series-Jeff Rubin-29.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/Bessma Momani_015.jpg' | relative_url }}"/></div>
-        <div><img alt="Senior Fellow Julie Maupin delivers a presentation on the rise of Bitcoin" src="{{ '/assets/gallery/CIGI Bitcoins_002.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/CIGI Innovation meeting-54.jpg' | relative_url }}"/></div>
-        <div><img alt="Lorem ipsum dolor sit amet" src="{{ '/assets/gallery/CiGi_67I7832.JPG' | relative_url }}"/></div>
-        <div><img alt="World Refugee Council chair Lloyed Axworthy" src="{{ '/assets/gallery/CiGi_67I7855.JPG' | relative_url }}"/></div>
-        <div><img alt="'Reconciling Regulation and Growth' presentation at the 2016 Oliver Wyman Conference" src="{{ '/assets/gallery/IMG_2742.jpg' | relative_url }}"/></div>
-        <div><img alt="Launch of Dragon's Footprint" src="{{ '/assets/gallery/IMG_4019.JPG' | relative_url }}"/></div>
-        <div><img alt="Former United States Ambassador to Finland Derek Shearer on stage at the CIGI Campus" src="{{ '/assets/gallery/Shearer - CIGI_017.jpg' | relative_url }}"/></div>
-        <div><img alt="Executive members of the World Refugee Council in Geneva Switzerland" src="{{ '/assets/gallery/WRC-Council-Leadership 1.jpg' | relative_url }}"/></div>
+        <div><img alt="Senior Fellow E. Richard Gold speaks about the social context of innovation." src="{{ '/assets/gallery/ 2016-11-19-091552-19405.jpg' | relative_url }}"/></div>
+        <div><img alt="CIGI President Rohinton Medhora on stage at Gateway House India." src="{{ '/assets/gallery/3W7A0257.JPG' | relative_url }}"/></div>
+        <div><img alt="CIGI President Rohinton Medhora at the Think 20 Summit in Berlin discussing the implications for global governance of Germany's G20 Presidency." src="{{ '/assets/gallery/380__1TK0083_ed_z.jpg' | relative_url }}"/></div>
+        <div><img alt="Some 85 think tanks from 50 countries at the 2016 Global Think Tank Summit reflected on their role in responding to globalization and its discontents." src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 92.jpg' | relative_url }}"/></div>
+        <div><img alt="CIGI President Rohinton Medhora and Minister of Foreign Affairs Stéphane Dion at the 2016 Global Think Tank Summit." src="{{ '/assets/gallery/2016-09-28 - Global Think Tank Summit - 106.jpg' | relative_url }}"/></div>
+        <div><img alt="Panelists stress the need for think tanks to innovate at the 2016 Global Think Tank Summit in Montreal." src="{{ '/assets/gallery/2016-09-30 - Global Think Tank Summit - 17.jpg' | relative_url }}"/></div>
+        <div><img alt="Deputy Governor of the Bank of Canada Timothy Lane speaks at CIGI about capital flows in the context of globalization." src="{{ '/assets/gallery/2016-11-16-Timothy Lane-20.jpg' | relative_url }}"/></div>
+        <div><img alt="Lieutenant Governor of Ontario Elizabeth Dowdeswell addresses the Global Youth Forum." src="{{ '/assets/gallery/2016-11-25 Global Youth Forum - 2_050.jpg' | relative_url }}"/></div>
+        <div><img alt="A local high school student participates in the Waterloo District School Board Model UN at the CIGI Campus." src="{{ '/assets/gallery/2017-03-24 - Model UN - 39.jpg' | relative_url }}"/></div>
+        <div><img alt="Global Security & Politics Director Fen Osler Hampson introduces a panel of foreign correspondents and writers covering the global refugee crisis." src="{{ '/assets/gallery/2017-04-03-Media Panel-Reporting the Refugee Crisis-7.jpg' | relative_url }}"/></div>
+        <div><img alt="Senior Fellow Jeff Rubin makes a case for divesting from fossil fuels in Canada during a public lecture in the CIGI Auditorium." src="{{ '/assets/gallery/2017-05-11-Speaker Series-Jeff Rubin-29.jpg' | relative_url }}"/></div>
+        <div><img alt="Senior Fellow Bessma Momani speaks about the rise of ISIS, and how Western governments can address homegrown terrorism through community empowerment." src="{{ '/assets/gallery/Bessma Momani_015.jpg' | relative_url }}"/></div>
+        <div><img alt="Senior Fellow Julie Maupin delivers a presentation on the rise of Bitcoin." src="{{ '/assets/gallery/CIGI Bitcoins_002.jpg' | relative_url }}"/></div>
+        <div><img alt="Bassem Awad, deputy director of international intellectual property law and innovation, at CIGI's Town Hall Forum on Innovation." src="{{ '/assets/gallery/CIGI Innovation meeting-54.jpg' | relative_url }}"/></div>
+        <div><img alt="Lloyd Axworthy discusses the work of the World Refugee Council with Kofi Annan." src="{{ '/assets/gallery/CiGi_67I7832.JPG' | relative_url }}"/></div>
+        <div><img alt="Lloyd Axworthy introduces the World Refugee Council at a meeting of ambassadors in Ottawa." src="{{ '/assets/gallery/CiGi_67I7855.JPG' | relative_url }}"/></div>
+        <div><img alt="'Reconciling Regulation and Growth' presentation at the 2016 Oliver Wyman Conference." src="{{ '/assets/gallery/IMG_2742.jpg' | relative_url }}"/></div>
+        <div><img alt="Research Fellow Alex He speaks in Beijing at the launch of his book The Dragon's Footprints: China in the Global Economic Governance System under the G20 Framework." src="{{ '/assets/gallery/IMG_4019.JPG' | relative_url }}"/></div>
+        <div><img alt="Former United States Ambassador to Finland Derek Shearer on stage at CIGI during his lecture on the potential impact of the 2016 US election." src="{{ '/assets/gallery/Shearer - CIGI_017.jpg' | relative_url }}"/></div>
+        <div><img alt="Paul Heinbecker, Hina Jilani, Jakaya Kikwete, Rita Süssmuth and Lloyd Axworthy at the first meeting of the World Refugee Council in Geneva, Switzerland." src="{{ '/assets/gallery/WRC-Council-Leadership 1.jpg' | relative_url }}"/></div>
       </div>
     </div>
   </div>
