--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -284,7 +284,6 @@ p {
 // Landing Page
 
 .landing-img {
-  filter: saturate(1.2);
 
   img {
     height: 100vh;
@@ -338,6 +337,7 @@ header.white {
 .landing {
   .landing-content {
     display: table;
+    font-size: 16px;
   }
 
   .wrapper {
@@ -491,6 +491,7 @@ header.white {
   }
 
   @include media-query($on-laptop) {
+    
     .content {
       margin: 0 2rem;
     }
