--- a/_includes/slide16-sheet2.html
+++ b/_includes/slide16-sheet2.html
@@ -14,28 +14,28 @@
     </tr>
     <tr>
         <td>Realized Inventment Income</td>
-        <td>$9,337,640</td>
-        <td>$4,640,288</td>
+        <td>$ 8,345,265</td>
+        <td>$ 8,345,265</td>
     </tr>
     <tr>
         <td>Grants (Government and Other)</td>
-        <td>3,525,400</td>
-        <td>3,772,027</td>
+        <td>1,804,027</td>
+        <td>1,804,027</td>
     </tr>
     <tr>
         <td>Donations and other Revenue</td>
-        <td>1,319,422</td>
-        <td>1,261,777</td>
+        <td>762,811</td>
+        <td>762,811</td>
     </tr>
     <tr>
         <td>Unrealized Investment Income (Loss)</td>
-        <td>(2,016,791)</td>
-        <td>(1,379,562)</td>
+        <td>331,580</td>
+        <td>331,580</td>
     </tr>
     <tr class="total">
         <td></td>
-        <td class="single">$12,165,671</td>
-        <td class="single">$8,294,530</td>
+        <td class="single">$11,243,683</td>
+        <td class="single">$11,243,683</td>
     </tr>
     <tr class="section">
         <td>Expenses</td>
@@ -44,48 +44,48 @@
     </tr>
     <tr>
         <td>Research, Conferences & Partnerships</td>
-        <td>$15,931,107</td>
-        <td>$14,542,584</td>
+        <td>$11,792,058</td>
+        <td>$11,792,058</td>
     </tr>
     <tr>
         <td>Amortization</td>
-        <td>2,713,660</td>
-        <td>3,448,421</td>
+        <td>3,480,827</td>
+        <td>3,480,827</td>
     </tr>
     <tr>
         <td>Administrative</td>
-        <td>1,973,594</td>
-        <td>2,049,629</td>
+        <td>1,593,669</td>
+        <td>1,593,669</td>
     </tr>
     <tr>
         <td>Facilities</td>
-        <td>1,179,226</td>
-        <td>1,049,197</td>
+        <td>1,089,937</td>
+        <td>1,089,937</td>
     </tr>
     <tr>
         <td>Technical Support</td>
-        <td>781,789</td>
-        <td>954,029</td>
+        <td>920,083</td>
+        <td>920,083</td>
     </tr>
     <tr class="total">
         <td></td>
-        <td class="single">$22,579,376</td>
-        <td class="single">$22,043,860</td>
+        <td class="single">$18,876,574</td>
+        <td class="single">$18,876,574</td>
     </tr>
     <tr>
-        <td>Excess of Expenses over Revenue</td>
-        <td>(10,413,705)</td>
-        <td>(13,749,330)</td>
+        <td>Excess of Revenue over Expenses<br>(Expenses over Revenue)</td>
+        <td>(7,632,891)</td>
+        <td>(7,632,891)</td>
     </tr>
     <tr class="total section">
         <td>Fund Balances, Beginning of the Year</td>
-        <td class="top">$200,645,859</td>
-        <td class="top">$214,395,189</td>
+        <td class="top">$222,028,080</td>
+        <td class="top">$222,028,080</td>
     </tr>
     <tr class="section total">
         <td>Fund Balances, End of the Year</td>
-        <td class="top double">$190,232,154</td>
-        <td class="top double">$200,645,859</td>
+        <td class="top double">$214,395,189</td>
+        <td class="top double">$214,395,189</td>
     </tr>
 </tbody>
 </table>
