changing the font

--- a/_includes/slide16.html
+++ b/_includes/slide16.html
@@ -3,8 +3,9 @@
           <div class="slide-content pb4-ns pr6-ns z-1">
             <div class="tabs mb3" data-slide="slide-16">
                 <div class="tab toggle" data-id="tab-1">Auditor's Report</div>
-                <div class="tab toggle" data-id="tab-2">Financial Statements</div>
-                <div class="tab toggle" data-id="tab-3">Notes</div>
+                <div class="tab toggle" data-id="tab-2">Balance Sheet</div>
+                <div class="tab toggle" data-id="tab-3">Revenue and Expenses</div>
+                <div class="tab toggle" data-id="tab-4">Notes</div>
                 <div class="download"><a class="no-underline" href="#">Download PDF</a></div>
             </div>
 
@@ -17,9 +18,11 @@
                 </div>
                 <div class="tab cf" data-id="tab-2">
                     {% include slide16-sheet1.html %}
+                </div>
+                <div class="tab cf" data-id="tab-3">
                     {% include slide16-sheet2.html %}
                 </div>
-                <div class="tab" data-id="tab-3">
+                <div class="tab" data-id="tab-4">
 
                     <h4>Notes</h4>
                     <p>Resources contributed for endowment are included in the Long Term Endowment Fund. Certain of such resources are to be held for a period of ten years or upon the dissolution, liquidation or winding up of the Organization, whichever occurs later. Certain of such resources contributed by the Federal Government of Canada is restricted in perpetuity. Investment income earned on resources of the Long Term Endowment Fund is reported in the Operating and Capital Fund.</p>
