--- a/_assets/css/custom/slides.scss
+++ b/_assets/css/custom/slides.scss
@@ -551,7 +551,8 @@ header.white {
   table {
     float: left;
     font-size: 0.875rem;
-    width: 47.5%;
+    width: 75%;
+    font-family: "Monaco";
     @include media-query($small-screen) {
       font-size: 0.6rem;
     }
@@ -565,11 +566,11 @@ header.white {
     }
 
     td:nth-child(1) {
-      width: 70%;
+      width: 60%;
     }
 
-    td:nth-child(2) {
-      width: 30%;
+    td:nth-child(2), td:nth-child(3) {
+      width: 20%;
     }
 
     thead {
@@ -607,18 +608,19 @@ header.white {
         &:nth-child(2), &:nth-child(3) {
           padding-right: 1rem;
           text-align: right;
+          
         }
       }
       .section {
         td:nth-child(1) {
-          font-weight: 500;
+          font-weight: 900;
           padding-left: 0;
         }
       }
 
       .total {
         td:nth-child(2), td:nth-child(3) {
-          font-weight: 500;
+          font-weight: 900;
         }
       }
 
